# internet-status-reporter

./: .env.sample  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  __Dockerfile  app.py  coverage.xml  dead.letter  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
.github/workflows/: coverage.yml  main.yml
scripts/: generate_coverage.sh  run.sh  run_tests.sh  setup.sh  update.sh  upload_coverage.sh
src/: DatabaseInteractor.py  InternetStatusReporter.py  MailHandler.py  MailLogger.py  ModemReporter.py  utils.py
src/tests/: DatabaseInteractor_test.py  InternetStatusReporter_test.py  MailHandler_test.py  MailLogger_test.py  ModemReporter_test.py  utils_test.py
