[tool.poetry]
name = "internet-status-reporter"
version = "1.3.0"
description = ""
authors = ["Edward Runkel <eddierunkel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pip = "^21.3"
MechanicalSoup = "^1.1.0"
mysql-connector = "^2.2.9"
pingparsing = "^1.3.2"
python-dotenv = "^0.19.1"
sentry-sdk = "^1.4.3"
tcp-latency = "^0.0.10"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.10.0"
coverage = "^6.0.2"
freezegun = "^1.1.0"
ipdb = "^0.13.9"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
